--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.3",
+    "jotai": "^2.6.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
