--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.43.4",
 		"@types/react-modal": "^3.16.3",
 		"jotai": "^2.6.1",
-		"next": "14.0.4",
+		"next": "^14.2.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^4.12.0",
