--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"@supabase/auth-ui-react": "^0.4.7",
+		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.4",
 		"@types/react-modal": "^3.16.3",
