--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
 		"@supabase/supabase-js": "^2.43.4",
 		"@types/react-modal": "^3.16.3",
 		"jotai": "^2.6.1",
-		"next": "^14.2.3",
-		"react": "^18",
-		"react-dom": "^18",
+		"next": "14.2.3",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
 		"react-icons": "^4.12.0",
-		"react-modal": "^3.16.1"
+		"react-modal": "^3.16.1",
+		"react-toastify": "^10.0.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.6.2",
-		"@storybook/addon-essentials": "^7.6.7",
-		"@storybook/addon-interactions": "^7.6.7",
-		"@storybook/addon-links": "^7.6.7",
-		"@storybook/addon-onboarding": "^1.0.10",
-		"@storybook/blocks": "^7.6.7",
-		"@storybook/nextjs": "^7.6.7",
-		"@storybook/react": "^7.6.7",
-		"@storybook/test": "^7.6.7",
+		"@storybook/addon-essentials": "^8.1.5",
+		"@storybook/addon-interactions": "^8.1.5",
+		"@storybook/addon-links": "^8.1.5",
+		"@storybook/addon-onboarding": "^8.1.5",
+		"@storybook/blocks": "^8.1.5",
+		"@storybook/nextjs": "^8.1.5",
+		"@storybook/react": "^8.1.5",
+		"@storybook/test": "^8.1.5",
 		"@types/node": "^20",
-		"@types/react": "^18",
+		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
-		"storybook": "^7.6.7",
+		"storybook": "^8.1.5",
 		"tailwindcss": "^3.4.0",
 		"typescript": "^5"
 	}
