--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@mui/material": "^5.15.19",
 		"@supabase/auth-ui-react": "^0.4.7",
 		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/ssr": "^0.3.0",
@@ -21,7 +24,6 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-icons": "^4.12.0",
-		"react-modal": "^3.16.1",
 		"react-toastify": "^10.0.5"
 	},
 	"devDependencies": {
