--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.6.2",
-		"@storybook/addon-essentials": "^8.1.5",
-		"@storybook/addon-interactions": "^8.1.5",
-		"@storybook/addon-links": "^8.1.5",
-		"@storybook/addon-onboarding": "^8.1.5",
-		"@storybook/blocks": "^8.1.5",
-		"@storybook/nextjs": "^8.1.5",
-		"@storybook/react": "^8.1.5",
-		"@storybook/test": "^8.1.5",
+		"@chromatic-com/storybook": "^1.5.0",
+		"@storybook/addon-essentials": "^8.1.6",
+		"@storybook/addon-interactions": "^8.1.6",
+		"@storybook/addon-links": "^8.1.6",
+		"@storybook/addon-onboarding": "^8.1.6",
+		"@storybook/blocks": "^8.1.6",
+		"@storybook/nextjs": "^8.1.6",
+		"@storybook/react": "^8.1.6",
+		"@storybook/test": "^8.1.6",
 		"@types/node": "^20",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
-		"storybook": "^8.1.5",
+		"storybook": "^8.1.6",
 		"tailwindcss": "^3.4.0",
 		"typescript": "^5"
 	}
