--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 		"@mui/material": "^5.15.19",
 		"@supabase/auth-ui-react": "^0.4.7",
 		"@supabase/auth-ui-shared": "^0.1.8",
-		"@supabase/ssr": "^0.3.0",
+		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.43.4",
 		"@types/react-modal": "^3.16.3",
 		"jotai": "^2.6.1",
-		"next": "14.2.3",
+		"next": "^14.2.23",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-icons": "^4.12.0",
