--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "jotai": "^2.6.1",
         "next": "^14.2.23",
         "react": "18.3.1",
+        "react-confetti": "^6.2.2",
         "react-dom": "18.3.1",
         "react-icons": "^4.12.0",
-        "react-toastify": "^10.0.5"
+        "react-toastify": "^10.0.5",
+        "react-use": "^17.6.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
