--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@mui/material": "^5.15.19",
+        "@radix-ui/react-slot": "^1.1.1",
         "@supabase/auth-ui-react": "^0.4.7",
         "@supabase/auth-ui-shared": "^0.1.8",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.43.4",
         "@types/react-modal": "^3.16.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "jotai": "^2.6.1",
+        "lucide-react": "^0.474.0",
         "next": "^14.2.23",
         "react": "18.3.1",
         "react-confetti": "^6.2.2",
         "react-dom": "18.3.1",
         "react-icons": "^4.12.0",
         "react-toastify": "^10.0.5",
-        "react-use": "^17.6.0"
+        "react-use": "^17.6.0",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
