--- a/biome.json
+++ b/biome.json
@@ -11,6 +11,9 @@
             "recommended": true,
             "correctness": {
                 "useExhaustiveDependencies": "off"
+            },
+            "complexity": {
+                "noForEach": "off"
             }
         }
     },
