--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/react-modal": "^3.16.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "frimousse": "^0.2.0",
         "jotai": "^2.6.1",
         "lucide-react": "^0.474.0",
         "next": "^14.2.23",
