--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
         "@storybook/nextjs": "^8.6.12",
         "@storybook/react": "^8.6.12",
         "@storybook/test": "^8.6.12",
+        "@tailwindcss/postcss": "^4.1.7",
         "@types/node": "^20",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18",
-        "autoprefixer": "^10.4.16",
         "postcss": "^8.4.32",
         "storybook": "^8.6.12",
-        "tailwindcss": "^3.4.0",
+        "tailwindcss": "^4.1.7",
         "typescript": "^5"
     }
 }
