--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,16 +1,20 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-    "organizeImports": {
+    "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
+    "vcs": {
         "enabled": true,
-        "ignore": [".next/"]
+        "clientKind": "git",
+        "useIgnoreFile": true
     },
+    "assist": { "actions": { "source": { "organizeImports": "on" } } },
     "linter": {
         "enabled": true,
-        "ignore": [".next/"],
         "rules": {
             "recommended": true,
             "correctness": {
                 "useExhaustiveDependencies": "off"
+            },
+            "a11y": {
+                "noStaticElementInteractions": "off"
             },
             "complexity": {
                 "noForEach": "off"
@@ -20,7 +24,6 @@
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
-        "indentWidth": 4,
-        "ignore": [".next/"]
+        "indentWidth": 4
     }
 }
