--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "biome check --write",
@@ -13,7 +13,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@mui/material": "^5.15.19",
+        "@mui/material": "^6.1.0",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.1",
         "@supabase/auth-ui-react": "^0.4.7",
@@ -26,10 +26,10 @@
         "frimousse": "^0.2.0",
         "jotai": "^2.6.1",
         "lucide-react": "^0.474.0",
-        "next": "^14.2.23",
-        "react": "18.3.1",
-        "react-confetti": "^6.2.2",
-        "react-dom": "18.3.1",
+        "next": "15.3.4",
+        "react": "19.1.0",
+        "react-confetti": "6.4.0",
+        "react-dom": "19.1.0",
         "react-icons": "^4.12.0",
         "react-toastify": "^10.0.5",
         "react-use": "^17.6.0",
@@ -45,12 +45,12 @@
         "@storybook/addon-onboarding": "^8.6.12",
         "@storybook/blocks": "^8.6.12",
         "@storybook/nextjs": "^8.6.12",
-        "@storybook/react": "^8.6.12",
+        "@storybook/react": "^8.6.14",
         "@storybook/test": "^8.6.12",
         "@tailwindcss/postcss": "^4.1.7",
         "@types/node": "^20",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18",
+        "@types/react": "^19.0.0",
+        "@types/react-dom": "^19.0.0",
         "postcss": "^8.4.32",
         "storybook": "^8.6.12",
         "tailwindcss": "^4.1.7",
