--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "frimousse": "^0.2.0",
         "jotai": "^2.6.1",
         "lucide-react": "^0.474.0",
-        "next": "15.3.4",
+        "next": "^15.5.6",
         "react": "19.1.0",
         "react-confetti": "6.2.2",
         "react-dom": "19.1.0",
